Fixes #111: Make the image captions easier to click: there's too much going on there at the moment

--- a/static/css/astrobin.less
+++ b/static/css/astrobin.less
@@ -2022,3 +2022,19 @@ table.form_saved, table.form_saved_container {
         background: none;
         vertical-align: middle;}}
 
+div.capty-caption {
+    background-color: #FFF;
+    color: #000;
+    padding-left: 10px;
+    padding-top: 7px;
+    text-shadow: 1px 1px 0 #222;
+    .rounded-corners-bottom(24px);
+    font-size: @base-font-size * 0.85;
+}
+
+
+div.capty-caption a {
+    color: @link-color;
+    text-decoration: none;
+    text-shadow: none;
+}
